fix: scaling alignments

--- a/css/main.css
+++ b/css/main.css
@@ -147,6 +147,7 @@ a {
 .latest-news-card img {
     border: none;
     border-radius: .2em;
+    width: 80vw;
 }
 
 .latest-news-card figcaption {
@@ -188,6 +189,10 @@ a {
     flex-direction: column;
     align-items: center;
     margin: 1em;
+}
+
+.team-member img {
+    width: 80vw;
 }
 
 .team-member figcaption {
